--- a/src/renderer/scss/component/_load-screen.scss
+++ b/src/renderer/scss/component/_load-screen.scss
@@ -1,6 +1,6 @@
 .load-screen {
   color: white;
-  background: var(--color-primary);
+  background: $lbry-teal-3;
   background-size: cover;
   min-height: 100vh;
   min-width: 100vw;
