--- a/src/renderer/scss/component/_menu.scss
+++ b/src/renderer/scss/component/_menu.scss
@@ -1,4 +1,4 @@
-$border-radius-menu: 2px;
+// $border-radius-menu: 2px; // unused
 
 .menu-container {
   display: inline-block;
@@ -7,17 +7,18 @@ $border-radius-menu: 2px;
 .menu {
   position: absolute;
   white-space: nowrap;
-  background-color: var(--menu-bg);
-  box-shadow: var(--box-shadow-layer);
-  border-radius: var(--menu-radius);
-  padding-top: ($spacing-vertical / 5) 0px;
+  // background-color: var(--menu-bg); // "--menu-bg" does not exist
+  // box-shadow: var(--box-shadow-layer);
+  // border-radius: var(--menu-radius); // "--menu-radius" does not exist
+  padding-top: ($spacing-vertical / 5) 0;
   z-index: 1;
 }
 
 .menu__menu-item {
   display: block;
   padding: ($spacing-vertical / 4) ($spacing-vertical / 2);
+
   &:hover {
-    background: var(--menu-item-hover-bg);
+    // background: var(--menu-item-hover-bg); // "--menu-item-hover-bg" does not exist
   }
 }
