--- a/src/renderer/scss/component/_toggle.scss
+++ b/src/renderer/scss/component/_toggle.scss
@@ -10,6 +10,48 @@
   user-select: none;
   margin-bottom: auto;
   margin-top: 2px;
+
+  &:hover {
+    &:not(.react-toggle--disabled) {
+      .react-toggle-track {
+        background-color: $lbry-black;
+      }
+    }
+  }
+}
+
+.react-toggle--checked {
+  &:hover {
+    &:not(.react-toggle--disabled) {
+      .react-toggle-track {
+        background-color: $lbry-teal-5;
+      }
+    }
+  }
+
+  .react-toggle-track {
+    background-color: $lbry-teal-3;
+  }
+
+  .react-toggle-track-check {
+    opacity: 1;
+    transition: opacity 0.25s ease;
+  }
+
+  .react-toggle-track-x {
+    opacity: 0;
+  }
+
+  .react-toggle-thumb {
+    left: 22px;
+    border-color: $lbry-teal-3;
+  }
+}
+
+.react-toggle--disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+  transition: opacity 0.25s;
 }
 
 .react-toggle-screenreader-only {
@@ -23,77 +65,6 @@
   width: 1px;
 }
 
-.react-toggle--disabled {
-  cursor: not-allowed;
-  opacity: 0.5;
-  -webkit-transition: opacity 0.25s;
-  transition: opacity 0.25s;
-}
-
-.react-toggle-track {
-  width: 40px;
-  height: 19px;
-  padding: 0;
-  border-radius: 30px;
-  background-color: #4d4d4d;
-  -webkit-transition: all 0.2s ease;
-  -moz-transition: all 0.2s ease;
-  transition: all 0.2s ease;
-}
-
-.react-toggle:hover:not(.react-toggle--disabled) .react-toggle-track {
-  background-color: #000000;
-}
-
-.react-toggle--checked .react-toggle-track {
-  background-color: var(--input-switch-color);
-}
-
-.react-toggle--checked:hover:not(.react-toggle--disabled) .react-toggle-track {
-  background-color: #158a88;
-}
-
-.react-toggle-track-check {
-  position: absolute;
-  width: 14px;
-  height: 10px;
-  top: 0px;
-  bottom: 0px;
-  margin-top: auto;
-  margin-bottom: auto;
-  line-height: 0;
-  left: 6px;
-  opacity: 0;
-  -webkit-transition: opacity 0.25s ease;
-  -moz-transition: opacity 0.25s ease;
-  transition: opacity 0.25s ease;
-}
-
-.react-toggle--checked .react-toggle-track-check {
-  opacity: 1;
-  -webkit-transition: opacity 0.25s ease;
-  -moz-transition: opacity 0.25s ease;
-  transition: opacity 0.25s ease;
-}
-
-.react-toggle-track-x {
-  position: absolute;
-  width: 10px;
-  height: 10px;
-  top: 0px;
-  bottom: 0px;
-  margin-top: auto;
-  margin-bottom: auto;
-  line-height: 0;
-  right: 10px;
-  opacity: 1;
-  transition: opacity 0.25s ease;
-}
-
-.react-toggle--checked .react-toggle-track-x {
-  opacity: 0;
-}
-
 .react-toggle-thumb {
   transition: all 0.5s cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   position: absolute;
@@ -101,14 +72,46 @@
   left: 1px;
   width: 17px;
   height: 17px;
-  border: 1px solid #4d4d4d;
+  border: 1px solid $lbry-gray-5;
   border-radius: 50%;
-  background-color: #fafafa;
+  background-color: $lbry-gray-1;
   box-sizing: border-box;
   transition: all 0.25s ease;
 }
 
-.react-toggle--checked .react-toggle-thumb {
-  left: 22px;
-  border-color: var(--input-switch-color);
+.react-toggle-track {
+  width: 40px;
+  height: 19px;
+  padding: 0;
+  border-radius: 30px;
+  background-color: $lbry-gray-5;
+  transition: all 0.2s ease;
+}
+
+.react-toggle-track-check {
+  position: absolute;
+  width: 14px;
+  height: 10px;
+  top: 0;
+  bottom: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+  line-height: 0;
+  left: 6px;
+  opacity: 0;
+  transition: opacity 0.25s ease;
+}
+
+.react-toggle-track-x {
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 0;
+  bottom: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+  line-height: 0;
+  right: 10px;
+  opacity: 1;
+  transition: opacity 0.25s ease;
 }
