--- a/src/renderer/scss/_gui.scss
+++ b/src/renderer/scss/_gui.scss
@@ -35,6 +35,7 @@
 }
 
 html {
+  background-color: $lbry-white;
   height: 100%;
 }
 
@@ -43,7 +44,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  color: var(--text-color);
+  color: $lbry-black;
   height: 100%;
   overflow: hidden;
 }
@@ -54,7 +55,7 @@ body {
 
 code {
   font: 1.5em Consolas, 'Lucida Console', 'Source Sans', monospace;
-  background-color: var(--color-bg-alt);
+  background-color: $lbry-gray-1;
 }
 
 // Without this buttons don't have the Metropolis font
@@ -69,8 +70,8 @@ ul {
 }
 
 input {
-  border-bottom: var(--input-border-size) dotted var(--input-border-color);
-  color: var(--input-color);
+  border-bottom: var(--input-border-size) dotted $lbry-gray-5;
+  color: $lbry-black;
   line-height: 1;
   cursor: text;
   background-color: transparent;
@@ -87,36 +88,36 @@ input {
   }
   &.input-copyable {
     flex: 1;
-    background: var(--input-copyable-bg);
-    color: var(--input-copyable-color);
+    background-color: $lbry-gray-1;
+    color: $lbry-gray-5;
     padding: 10px 16px;
-    border: 1px dashed var(--input-copyable-border);
+    border: 1px dashed $lbry-gray-3;
     text-overflow: ellipsis;
   }
 
   &:not(.input-copyable):not(.wunderbar__input):not(:placeholder-shown):not(:disabled) {
     &:hover {
-      border-color: var(--input-hover-border-color);
+      border-color: rgba($lbry-black, 0.8);
     }
-    border-bottom: var(--input-border-size) solid var(--input-border-color);
+    border-bottom: var(--input-border-size) solid $lbry-gray-5;
   }
 
   &:disabled {
-    color: var(--input-disabled-color);
-    border-bottom: var(--input-border-size) solid var(--input-disabled-color);
+    color: $lbry-gray-3;
+    border-bottom: var(--input-border-size) solid $lbry-gray-3;
     cursor: default;
   }
 }
 
 textarea {
-  border: 1px solid var(--color-divider);
+  border: 1px solid $lbry-gray-2;
   font-size: 0.8em;
   width: 100%;
   padding: $spacing-vertical * 1/3;
 }
 
 input::placeholder {
-  color: var(--input-placeholder-color);
+  color: $lbry-gray-5;
   opacity: 0.5;
 }
 
@@ -164,7 +165,7 @@ p {
   right: 0;
   bottom: 0;
   display: flex;
-  background-color: var(--color-bg);
+  background-color: rgba($lbry-gray-1, 0.3);
 
   @media only screen and (min-width: $medium-breakpoint) {
     grid-template-columns: var(--side-nav-width-m) auto;
@@ -253,8 +254,8 @@ p {
 
 /* Custom text selection */
 *::selection {
-  background: var(--text-selection-bg);
-  color: var(--text-selection-color);
+  background: $lbry-teal-1;
+  color: $lbry-white;
 }
 
 .credit-amount {
@@ -274,20 +275,20 @@ p {
 }
 
 .credit-amount--free {
-  color: var(--color-credit-free);
+  color: $lbry-blue-5;
 
   &.credit-amount--file-page {
-    color: var(--color-dark-blue);
-    background-color: var(--color-secondary);
+    color: $lbry-blue-5;
+    background-color: $lbry-blue-2;
   }
 }
 
 .credit-amount--cost {
-  color: var(--color-credit-price);
+  color: $lbry-gray-5;
 
   &.credit-amount--file-page {
-    color: var(--color-black);
-    background-color: var(--color-yellow);
+    color: $lbry-black;
+    background-color: $lbry-yellow-3;
   }
 }
 
@@ -300,7 +301,7 @@ p {
 }
 
 .divider__horizontal {
-  border-top: var(--color-divider);
+  border-top: $lbry-gray-2;
   margin: 16px 0;
 }
 
@@ -346,7 +347,7 @@ p {
 
 .help {
   font-size: 12px;
-  color: var(--color-help);
+  color: $lbry-gray-5;
 }
 
 .help--padded {
@@ -355,16 +356,16 @@ p {
 
 .meta {
   font-size: 0.8em;
-  color: var(--color-meta-light);
+  color: $lbry-gray-1; // "--color-meta-light" does not exist
 }
 
 .empty {
-  color: var(--color-meta-light);
+  color: $lbry-gray-1;
   font-style: italic;
 }
 
 .qr-code {
-  border: 3px solid var(--color-white);
+  border: 3px solid $lbry-white;
   height: 134px;
   width: 134px;
   &.qr-code--right-padding {
@@ -376,7 +377,7 @@ p {
 }
 
 .error-text {
-  color: var(--color-error);
+  color: $lbry-red-5;
 }
 
 .thumbnail-preview {
