--- a/src/renderer/scss/component/_header.scss
+++ b/src/renderer/scss/component/_header.scss
@@ -7,8 +7,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 $spacing-width * 1/3;
-  background-color: var(--color-bg);
-  box-shadow: var(--box-shadow-header);
+  background-color: $lbry-white;
+  // box-shadow: var(--box-shadow-header);
 
   @media (min-width: $medium-breakpoint) {
     padding: 0 $spacing-width;
