--- a/src/renderer/scss/component/_nav.scss
+++ b/src/renderer/scss/component/_nav.scss
@@ -1,13 +1,13 @@
 .nav {
   min-width: var(--side-nav-width);
-  background-color: var(--nav-bg-color);
+  background-color: rgba($lbry-gray-1, 0.7);
   padding: $spacing-width * 1/3;
-  color: var(--nav-color);
+  color: $lbry-gray-5;
 
   hr {
     width: 24px;
     margin: 36px 0;
-    border: solid 1px var(--color-divider);
+    border: solid 1px $lbry-gray-2;
     margin: $spacing-vertical $spacing-vertical * 2/3;
   }
 
@@ -48,7 +48,7 @@
   }
 
   .btn:hover {
-    color: var(--text-color);
+    color: $lbry-black;
   }
 }
 
@@ -70,11 +70,11 @@
 }
 
 .nav__link--active {
-  color: var(--text-color);
+  color: $lbry-black;
 }
 
 .nav__sub-links {
-  color: var(--nav-color);
+  color: $lbry-gray-5;
   padding-bottom: $spacing-vertical * 1/3;
 }
 
