--- a/src/renderer/scss/component/_syntax-highlighter.scss
+++ b/src/renderer/scss/component/_syntax-highlighter.scss
@@ -1,147 +1,121 @@
-/*
-    Name:       one-dark 1.1.1
-    Author:     Török Ádám (http://github.com/Aerobird98)
-    Original Atom One Dark Theme (https://github.com/atom/one-dark-ui & https://github.com/atom/one-dark-syntax)
+/*!
+  Name: one-dark 1.1.1
+  Author: Török Ádám (http://github.com/Aerobird98)
+  Original Atom One Dark Theme (https://github.com/atom/one-dark-ui & https://github.com/atom/one-dark-syntax)
 */
 
 /* basic */
-.CodeMirror.cm-s-one-dark {
-  color: #abb2bf;
-}
+.CodeMirror {
+  &.cm-s-one-dark {
+    color: #abb2bf;
 
-.CodeMirror.cm-s-one-dark .CodeMirror-lines {
-  color: #abb2bf !important;
-  background-color: transparent;
-}
-.CodeMirror.cm-s-one-dark .CodeMirror-cursor {
-  border-left: 2px solid #56b6c2 !important;
-}
-/* addon: edit/machingbrackets.js & addon: edit/matchtags.js */
-.CodeMirror.cm-s-one-dark .CodeMirror-matchingbracket,
-.CodeMirror.cm-s-one-dark .CodeMirror-matchingtag {
-  border-bottom: 2px solid #56b6c2;
-  color: #abb2bf !important;
-  background-color: transparent;
-}
-.CodeMirror.cm-s-one-dark .CodeMirror-nonmatchingbracket {
-  border-bottom: 2px solid #e06c75;
-  color: #abb2bf !important;
-  background-color: transparent;
-}
-/* addon: fold/foldgutter.js */
-.CodeMirror.cm-s-one-dark .CodeMirror-foldmarker,
-.CodeMirror.cm-s-one-dark .CodeMirror-foldgutter,
-.CodeMirror.cm-s-one-dark .CodeMirror-foldgutter-open,
-.CodeMirror.cm-s-one-dark .CodeMirror-foldgutter-folded {
-  border: none;
-  text-shadow: none;
-  color: #5c6370 !important;
-  background-color: transparent;
-}
-/* addon: selection/active-line.js */
-.CodeMirror.cm-s-one-dark .CodeMirror-activeline-background {
-  background-color: rgba(153, 187, 255, 0.04);
-}
-/* basic syntax */
-.CodeMirror.cm-s-one-dark .cm-header {
-  color: #e06c75;
-}
-.CodeMirror.cm-s-one-dark .cm-quote {
-  color: #5c6370;
-  font-style: italic;
-}
-.CodeMirror.cm-s-one-dark .cm-negative {
-  color: #e06c75;
-}
-.CodeMirror.cm-s-one-dark .cm-positive {
-  color: #e06c75;
-}
-.CodeMirror.cm-s-one-dark .cm-strong {
-  color: #d19a66;
-  font-weight: bold;
-}
-.CodeMirror.cm-s-one-dark .cm-header .cm-strong {
-  color: #d19a66;
-  font-weight: bold;
-}
-.CodeMirror.cm-s-one-dark .cm-em {
-  color: #c678dd;
-  font-style: italic;
-}
-.CodeMirror.cm-s-one-dark .cm-header .cm-em {
-  color: #c678dd;
-  font-style: italic;
-}
-.CodeMirror.cm-s-one-dark .cm-tag {
-  color: #e06c75;
-}
-.CodeMirror.cm-s-one-dark .cm-attribute {
-  color: #d19a66;
-}
-.CodeMirror.cm-s-one-dark .cm-link {
-  color: #98c379;
-  border-bottom: solid 1px #98c379;
-}
-.CodeMirror.cm-s-one-dark .cm-builtin {
-  color: #e06c75;
-}
-.CodeMirror.cm-s-one-dark .cm-keyword {
-  color: #c678dd;
-}
-.CodeMirror.cm-s-one-dark .cm-def {
-  color: #e5c07b;
-} /* original:  #d19a66; */
-.CodeMirror.cm-s-one-dark .cm-atom {
-  color: #d19a66;
-}
-.CodeMirror.cm-s-one-dark .cm-number {
-  color: #d19a66;
-}
-.CodeMirror.cm-s-one-dark .cm-property {
-  color: #56b6c2;
-} /* original: #abb2bf */
-.CodeMirror.cm-s-one-dark .cm-qualifier {
-  color: #d19a66;
-}
-.CodeMirror.cm-s-one-dark .cm-variable {
-  color: #e06c75;
-}
-.CodeMirror.cm-s-one-dark .cm-string {
-  color: #98c379;
-}
-.CodeMirror.cm-s-one-dark .cm-punctuation {
-  color: #abb2bf;
-}
-.CodeMirror.cm-s-one-dark .cm-operator {
-  color: #56b6c2;
-} /* original: #abb2bf */
-.CodeMirror.cm-s-one-dark .cm-meta {
-  color: #abb2bf;
-}
-.CodeMirror.cm-s-one-dark .cm-bracket {
-  color: #abb2bf;
-}
-.CodeMirror.cm-s-one-dark .cm-comment {
-  color: #5c6370;
-  font-style: italic;
-}
-.CodeMirror.cm-s-one-dark .cm-error {
-  color: #e06c75;
-}
-/* css syntax corrections */
-.CodeMirror.cm-s-one-dark .cm-m-css.cm-variable {
-  color: #828997;
-}
-.CodeMirror.cm-s-one-dark .cm-m-css.cm-property {
-  color: #abb2bf;
-}
-.CodeMirror.cm-s-one-dark .cm-m-css.cm-atom {
-  color: #56b6c2;
-}
-.CodeMirror.cm-s-one-dark .cm-m-css.cm-builtin {
-  color: #56b6c2;
-}
-/* lua syntax corrections */
-.CodeMirror.cm-s-one-dark .cm-m-lua.cm-variable {
-  color: #56b6c2;
+    .CodeMirror-cursor {
+      border-left: 2px solid #56b6c2;
+    }
+
+    .CodeMirror-lines {
+      background-color: transparent;
+    }
+
+    // addon: edit/machingbrackets.js & addon: edit/matchtags.js
+    .CodeMirror-matchingbracket,
+    .CodeMirror-matchingtag {
+      border-bottom: 2px solid #56b6c2;
+      color: #abb2bf !important;
+      background-color: transparent;
+    }
+
+    .CodeMirror-nonmatchingbracket {
+      border-bottom: 2px solid #e06c75;
+      color: #abb2bf !important;
+      background-color: transparent;
+    }
+
+    // addon: fold/foldgutter.js
+    .CodeMirror-foldmarker,
+    .CodeMirror-foldgutter,
+    .CodeMirror-foldgutter-open,
+    .CodeMirror-foldgutter-folded {
+      border: none;
+      text-shadow: none;
+      color: #5c6370 !important;
+      background-color: transparent;
+    }
+
+    // addon: selection/active-line.js
+    .CodeMirror-activeline-background {
+      background-color: rgba(153, 187, 255, 0.04);
+    }
+
+    // basic syntax
+    .cm-atom,
+    .cm-attribute,
+    .cm-number,
+    .cm-qualifier,
+    .cm-strong {
+      color: #d19a66;
+    }
+
+    .cm-bracket,
+    .cm-meta,
+    .cm-punctuation,
+    .cm-m-css.cm-property {
+      color: #abb2bf;
+    }
+
+    .cm-builtin,
+    .cm-error,
+    .cm-header,
+    .cm-negative,
+    .cm-positive,
+    .cm-tag,
+    .cm-variable {
+      color: #e06c75;
+    }
+
+    .cm-comment,
+    .cm-quote {
+      color: #5c6370;
+    }
+
+    .cm-def {
+      color: #e5c07b;
+    }
+
+    .cm-em,
+    .cm-keyword {
+      color: #c678dd;
+    }
+
+    .cm-comment,
+    .cm-em,
+    .cm-quote {
+      font-style: italic;
+    }
+
+    .cm-link,
+    .cm-string {
+      color: #98c379;
+    }
+
+    .cm-link {
+      border-bottom: 1px solid #98c379;
+    }
+
+    .cm-operator,
+    .cm-property,
+    .cm-m-css.cm-atom,
+    .cm-m-css.cm-builtin,
+    .cm-m-lua.cm-variable {
+      color: #56b6c2;
+    }
+
+    .cm-strong {
+      font-weight: bold;
+    }
+
+    .cm-m-css.cm-variable {
+      color: #828997;
+    }
+  }
 }
